Rename audio_delay_milliseconds to frames_delayed.

The current name, delay_milliseconds, is misleading since the value is
actually a count of frames since crrev.com/1687213002

BUG=604313

Review-Url: https://codereview.chromium.org/2004963002
Cr-Commit-Position: refs/heads/master@{#396535}

Former-commit-id: d49506b3d5dda08982bad081b99ec8a9abe5f331