media/renderers/audio_renderer_impl.h
@@ -147,8 +147,8 @@ class MEDIA_EXPORT AudioRendererImpl
   // Render() updates the pipeline's playback timestamp. If Render() is
   // not called at the same rate as audio samples are played, then the reported
   // timestamp in the pipeline will be ahead of the actual audio playback. In
-  // this case |audio_delay_milliseconds| should be used to indicate when in the
-  // future should the filled buffer be played.
+  // this case |frames_delayed| should be used to indicate when in the future
+  // should the filled buffer be played.
   int Render(AudioBus* audio_bus,
              uint32_t frames_delayed,
              uint32_t frames_skipped) override;
